# megobari

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  pyproject.toml  run.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
claude_instructions/: api-conventions.md  architecture.md  project-structure.md  testing.md
dashboard/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: routeTree.gen.ts  router.tsx
dashboard/src/components/: copy-md.tsx  login.tsx
dashboard/src/components/layout/: app-layout.tsx  app-sidebar.tsx
dashboard/src/hooks/: use-live-messages.ts
dashboard/src/lib/: api.ts  query-options.ts
dashboard/src/routes/: __root.tsx  conversations.tsx  health.tsx  index.tsx  monitor.tsx  personas.tsx  sessions.$name.tsx  sessions.index.tsx  usage.tsx
docs/plans/: 2026-02-25-openclaw-features-design.md  2026-02-25-openclaw-features-plan.md  2026-02-28-website-monitor-design.md  2026-02-28-website-monitor-plan.md
ideas/: mcp-servers-support.md  permission-forwarding.md
plugins/clickhouse-skills/: README.md
plugins/clickhouse-skills/.claude-plugin/: plugin.json
plugins/transit-data/: README.md
plugins/transit-data/.claude-plugin/: plugin.json
plugins/transit-data/skills/gtfs-analysis/: SKILL.md
requirements/: 001-telegram-bot.md  002-skills-and-mcp-library.md  003-progress-indicators.md  004-pypi-package-and-library-api.md  005-action-protocol.md  006-voice-messages.md
src/megobari/: __init__.py  __main__.py  actions.py  bot.py  claude_bridge.py  config.py  formatting.py  markdown_html.py  mcp_config.py  message_utils.py  monitor.py  recall.py  scheduler.py  session.py  summarizer.py  telegram_transport.py  transport.py  voice.py
src/megobari/api/: __init__.py  app.py  auth.py  pubsub.py
src/megobari/api/routes/: health.py  memories.py  messages.py  monitoring.py  personas.py  scheduling.py  sessions.py  summaries.py  usage.py  ws.py
src/megobari/db/: __init__.py  engine.py  models.py  repository.py
src/megobari/db/migrations/: env.py  script.py.mako
src/megobari/db/migrations/versions/: 2026_02_27_05f41c2650fe_initial_schema.py  2026_02_28_371a9d2fecb0_add_heartbeat_checks_table.py  2026_02_28_60c76b4cd923_add_skills_to_persona.py  2026_02_28_8ce57dd3341d_add_cron_jobs_table.py  2026_02_28_a1b2c3d4e5f6_add_dashboard_tokens_table.py  2026_02_28_d7d22e4ac66c_add_monitor_tables.py
src/megobari/handlers/: __init__.py  _common.py  admin.py  claude.py  dashboard.py  monitoring.py  persona.py  scheduling.py  sessions.py  tuning.py  usage.py  workspace.py
tests/: conftest.py  test_actions.py  test_api.py  test_bot.py  test_claude_bridge.py  test_commands_db.py  test_commands_new.py  test_config.py  test_db.py  test_formatting.py  test_handlers_monitoring.py  test_main.py  test_markdown_html.py  test_mcp_config.py  test_message_utils.py  test_monitor.py  test_pubsub.py  test_recall.py  test_scheduler.py  test_session.py  test_summarizer.py  test_telegram_transport.py  test_voice.py
