[project]
name = "megobari"
version = "0.1.1"
description = "Telegram bot bridging to Claude Code — use as CLI or embed as a library"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["telegram", "claude", "bot", "assistant", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "python-telegram-bot>=22.0",
    "claude-agent-sdk>=0.1.30",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
voice = ["faster-whisper>=1.0.0"]

[project.urls]
Homepage = "https://github.com/emakarov/megobari"
Repository = "https://github.com/emakarov/megobari"
Issues = "https://github.com/emakarov/megobari/issues"

[project.scripts]
megobari = "megobari.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/megobari"]

# -- Dev dependencies --

[dependency-groups]
lint = [
    "flake8>=7.0",
    "flake8-pyproject>=1.2",
    "isort>=5.13",
    "pydocstyle>=6.3",
    "pydocstyle[toml]>=6.3",
    "pre-commit>=3.6",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "watchfiles>=1.1.1",
]

# -- Tool configs --

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "tests/*:D100,D101,D102,D103,D104",
]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["megobari"]
src_paths = ["src", "tests"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D107"]
match = "(?!test_).*\\.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=megobari",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["src/megobari"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]
